--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,42 +25,43 @@
 </head>
 
 <body>
-	<main class="font-sans text-base  ">
-<!-- here's the language nav -->
+	<main class="font-sans text-base ">
+		<!-- here's the language nav -->
 		<nav class="md:flex lg:flex flex:column justify-end  bg-liana" id="topnav">
 			<div><a href="http://www.lianatech.com/news">News</a></div>
 			<div><a>Intranet</a></div>
-			<div>
+			<div class="text-center" >
 				<select name="language" id="language">
 					<option value="English">in English</option>
 				</select>
 			</div>
 		</nav>
-<!-- here's the sticky top bar navigation -->
-		<nav id="mainnav" class="bg-white container flex flex-wrap justify-between items-center mx-auto">
+		<!-- here's the sticky top bar navigation -->
+		<nav id="mainnav" class="bg-white container flex flex-wrap text-center justify-between items-center ml-32 md:ml-28">
 
-			<img src="../images/liana-logo.png" alt="Liana company logo" id="logo" class="" />
-			<div><a href="http://www.lianatech.com/company">Company</a></div>
-			<div><a href="http://www.lianatech.com/products">Products</a></div>
-			<div><a href="http://www.lianatech.com/contact">Contact Us</a></div>
+			<div class="flex flex-wrap justify-left  items-center w-14 md:w-3/6  lg:w-2/6 ">
+				<div id="logo" class=" py-5 "> <img src="../images/liana-logo.png" alt="Liana company logo" class="" /></div>
+				<div id="menufirst" class="menu p-2 lg:pl-6" ><a href="http://www.lianatech.com/company">Company</a></div>
+				<div  class="menu p-2"><a href="http://www.lianatech.com/products">Products</a></div>
+				<div  class="menu p-2"><a href="http://www.lianatech.com/contact">Contact Us</a></div>
+			</div>
 
-
-			<div id="page-search" class="w-64">
-
-				<input aria-label="Insert term to search for" id="searchsite" name="search" placeholder="Search" type="text">
-				<input aria-label="Search from the site" onclick="siteSearch()" type="submit" value="Search" id="searchsubmit"  />
-
-
+			<!-- page search -->
+			<div id="page-search" class="lg:w-2/6 lg:mr-8  justify-items-end  ">
+				<input aria-label="Insert term to search for" id="searchsite" name="search" placeholder="Search"
+					type="text">
+				<input aria-label="Search from the site" onclick="siteSearch()" type="submit" value="Search"
+					id="searchsubmit" />
 			</div>
 		</nav>
 
-<!-- here's hero -->
+		<!-- here's hero -->
 
 
 
 		<div id="hero" class="flex items-center">
-				<h1 class="font-light">Software fueling digital marketing</h1>
-				<button class="" >Read more!</button>
+			<h1 class="font-light">Software fueling digital marketing</h1>
+			<button class="">Read more!</button>
 
 		</div>
 
