--- a/src/html/index.html
+++ b/src/html/index.html
@@ -56,14 +56,17 @@
 		</nav>
 
 		<!-- here's hero -->
-
-
-
-		<div id="hero" class="flex items-center">
-			<h1 class="font-light">Software fueling digital marketing</h1>
-			<button class="">Read more!</button>
-
+		<section>
+		<div id="hero" class="flex  items-center md:h-96">
+			<div>
+				<div><h1 class="font-light text-white">Software fueling digital marketing</h1></div>
+				<div><button class="">Read more!</button></div>
+			</div>
 		</div>
+		</section>
+
+
+
 
 	</main>
 </body>
