--- a/src/html/index.html
+++ b/src/html/index.html
@@ -57,10 +57,10 @@
 
 		<!-- here's hero -->
 		<section>
-		<div id="hero" class="flex  items-center md:h-96">
-			<div>
-				<div><h1 class="font-light text-white">Software fueling digital marketing</h1></div>
-				<div><button class="">Read more!</button></div>
+		<div id="hero" class="flex md:h-96">
+			<div  class="m-auto text-center">
+				<div><h1 id="hero-title" class=" font-light text-white">Software fueling digital marketing</h1></div>
+				<div><button class="font-thin">Learn more</button></div>
 			</div>
 		</div>
 		</section>
