--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,91 +2,140 @@
 <html lang="en">
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
 	<!-- let's get index.css which contains sass and sailfish -->
-	<link rel="stylesheet" href="../css/sailfishStyles.css">
-	<link rel="stylesheet" href="../css/sassOutput.css">
+	<link rel="stylesheet" href="../css/sailfishStyles.css" />
+	<link rel="stylesheet" href="../css/sassOutput.css" />
 
 	<!-- Let's include the Liana's own data for ico and sos. med. link previews -->
-	<link rel="shortcut icon" href="https://www.lianatech.com/media/layout/img/favicon/favicon.ico">
+	<link rel="shortcut icon" href="https://www.lianatech.com/media/layout/img/favicon/favicon.ico" />
 
-	<title>Marketing &amp; PR Technology Stack | Liana Technologies - LianaTech.com</title>
+	<title>
+		Marketing &amp; PR Technology Stack | Liana Technologies -
+		LianaTech.com
+	</title>
 	<meta name="description"
-		content="Take your marketing to the cloud. With Liana® Cloud, we offer you the right solutions for everything you need in your digital marketing and communications.">
-	<meta property="og:site_name" content="LianaTech.com">
-	<meta property="og:url" content="https://www.lianatech.com/">
-	<meta property="og:title" content="Marketing &amp; PR Technology Stack | Liana Technologies - LianaTech.com">
+		content="Take your marketing to the cloud. With Liana® Cloud, we offer you the right solutions for everything you need in your digital marketing and communications." />
+	<meta property="og:site_name" content="LianaTech.com" />
+	<meta property="og:url" content="https://www.lianatech.com/" />
+	<meta property="og:title" content="Marketing &amp; PR Technology Stack | Liana Technologies - LianaTech.com" />
 	<meta property="og:description"
-		content="Take your marketing to the cloud. With Liana® Cloud, we offer you the right solutions for everything you need in your digital marketing and communications.">
-	<meta property="og:image" content="https://www.lianatech.com/media/liana-cloud-marketing-stack.jpg">
-
+		content="Take your marketing to the cloud. With Liana® Cloud, we offer you the right solutions for everything you need in your digital marketing and communications." />
+	<meta property="og:image" content="https://www.lianatech.com/media/liana-cloud-marketing-stack.jpg" />
 </head>
 
 <body>
-	<main class="font-sans text-base ">
+	<main class="font-sans text-base">
 		<!-- here's the language nav -->
-		<nav class="md:flex lg:flex flex:column justify-end  bg-liana" id="topnav">
+		<nav class="md:flex lg:flex flex:column justify-end bg-liana" id="topnav">
 			<div><a href="http://www.lianatech.com/news">News</a></div>
 			<div><a href="http://www.lianatech.com/intra">Intranet</a></div>
-			<div class="text-center" >
+			<div class="text-center">
 				<select name="language" id="language">
 					<option value="English">in English</option>
 				</select>
 			</div>
 		</nav>
 		<!-- here's the sticky top bar navigation -->
-		<nav id="mainnav" class="bg-white container flex flex-wrap text-center justify-between items-center ">
-
-			<div class="flex flex-wrap justify-left items-center ">
-				<div id="logo" class=" py-5 "> <img src="../images/liana-logo.png" alt="Liana company logo" class="" /></div>
-				<div id="menufirst" class="menu p-2 lg:pl-6" ><a href="http://www.lianatech.com/company">Company</a></div>
-				<div  class="menu p-2"><a href="http://www.lianatech.com/products">Products</a></div>
-				<div  class="menu p-2"><a href="http://www.lianatech.com/contact">Contact Us</a></div>
+		<nav id="mainnav" class="bg-white container flex flex-wrap text-center justify-between items-center">
+			<div class="flex flex-wrap justify-left items-center">
+				<div id="logo" class="py-5">
+					<img src="../images/liana-logo.png" alt="Liana company logo" class="" />
+				</div>
+				<div id="menufirst" class="menu p-2 lg:pl-6">
+					<a href="http://www.lianatech.com/company">Company</a>
+				</div>
+				<div class="menu p-2">
+					<a href="http://www.lianatech.com/products">Products</a>
+				</div>
+				<div class="menu p-2">
+					<a href="http://www.lianatech.com/contact">Contact Us</a>
+				</div>
 			</div>
 
 			<!-- page search -->
-			<div id="page-search" class="lg:w-2/6 lg:mr-8  justify-items-end  ">
+			<div id="page-search" class="lg:w-2/6 lg:mr-8 justify-items-end">
 				<input aria-label="Insert term to search for" id="searchsite" name="search" placeholder="Search"
-					type="text">
+					type="text" />
 				<input aria-label="Search from the site" onclick="siteSearch()" type="submit" value="Search"
 					id="searchsubmit" />
 			</div>
 		</nav>
 
 		<!-- here's hero -->
-		<section id="hero" class="flex md:h-96  ">
-			<div  class="m-auto text-center">
-				<div><h1 id="hero-title" class=" sm:text-xl font-light text-white">Software fueling digital marketing</h1></div>
+		<section id="hero" class="flex md:h-96">
+			<div class="m-auto text-center">
+				<div>
+					<h1 id="hero-title" class="sm:text-xl font-light text-white">
+						Software fueling digital marketing
+					</h1>
+				</div>
 				<div><button class="font-thin">Learn more</button></div>
 			</div>
 		</section>
 
 		<!-- here's the company cards -->
 
-		<section id="compcards" class="grid md:grid-flow-col m-12 gap-8 bg-white ">
+		<section id="compcards" class="grid md:grid-flow-col m-12 gap-8 bg-white">
 			<!-- company -->
-			<div class="flex justify-center items-center compcard"><a class="" href="http://www.lianatech.com/company">Company</a></div>
+			<div class="flex justify-center items-center compcard">
+				<a class="" href="http://www.lianatech.com/company">Company</a>
+			</div>
 			<!-- products -->
-			<div class="flex justify-center items-center compcard"><a href="http://www.lianatech.com/Products">Products</a></div>
+			<div class="flex justify-center items-center compcard">
+				<a href="http://www.lianatech.com/Products">Products</a>
+			</div>
 			<!-- contact us -->
-			<div class="flex justify-center items-center compcard"><a href="http://www.lianatech.com/news">Contact us</a></div>
+			<div class="flex justify-center items-center compcard">
+				<a href="http://www.lianatech.com/news">Contact us</a>
+			</div>
 		</section>
 
 		<!-- here's the counters -->
 
-		<section id="counters" class="grid md:grid-flow-col m-12 gap-8 bg-white ">
+		<section id="counters" class="
+		grid
+		grid-flow-col
+		my-12
+		gap-8
+		mx-72
+		bg-white">
+			<!-- counter 1 -->
+			<div class=" counter">
+				<img src="../images/Business.jpg" alt="Business icon" />
 
+				<div class="ml-8">
+					<h2 >3000</h2>
+					<p >Clients</p>
+				</div>
+			</div>
+			<!-- counter 2 -->
+			<div class="counter">
+				<img src="../images/Face.jpg" alt="Business icon" />
 
+				<div class="ml-8">
+					<h2>180</h2>
+					<p>Employees</p>
+				</div>
+			</div>
+			<!-- counter 3 -->
+			<div class=" counter">
+				<img src="../images/Public.jpg" alt="Business icon" />
+				<div class="ml-8">
+					<h2>10000</h2>
+					<p>Daily users</p>
+				</div>
+			</div>
 		</section>
 
+		<!-- latest news -->
 
+		<section id="news"></section>
 	</main>
 </body>
 
-<script>
-
-</script>
+<script></script>
 
 </html>
