footer and check to go

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -134,79 +134,124 @@
 
 		<section class="pb-2" id="news">
 			<h1 class="pt-12 text-center">Latest News</h1>
-			<div  class="
+			<div class="
 			grid
 			md:grid-flow-col
 			m-12
 			gap-8
 			">
-			<!-- newsitem 1 -->
-			<div class="newsitem">
-				<p>27.07.2016</p>
-				<h3>Liana Technologies and Encode Solutions merge to create unique mobile solutions	</h3>
-			</div>
-			<!-- newsitem 2 -->
-			<div class="newsitem">
+				<!-- newsitem 1 -->
+				<div class="newsitem">
+					<p>27.07.2016</p>
+					<h3>Liana Technologies and Encode Solutions merge to create unique mobile solutions </h3>
+				</div>
+				<!-- newsitem 2 -->
+				<div class="newsitem">
 
-				<p>28.01.2016</p>
-				<h3>From a local startup to a global player: Liana Technologies among the forerunners of digital
-					marketing technology</h3>
+					<p>28.01.2016</p>
+					<h3>From a local startup to a global player: Liana Technologies among the forerunners of digital
+						marketing technology</h3>
 
-			</div>
-			<!-- newsitem 3 -->
-			<div class="newsitem">
+				</div>
+				<!-- newsitem 3 -->
+				<div class="newsitem">
 
-				<p>02.07.2015</p>
-				<h3>Liana Technologies Hong Kong launched a series of digital marketing events in June</h3>
+					<p>02.07.2015</p>
+					<h3>Liana Technologies Hong Kong launched a series of digital marketing events in June</h3>
 
-			</div>
+				</div>
 			</div>
 		</section>
 
-				<!--references -->
+		<!--references -->
 		<section class="pb-2" id="references">
 			<h1 class="pt-12 text-center">References</h1>
-			<div  class="
+			<div class="
 			grid
 			md:grid-flow-col
 			m-12
 			gap-8
 
 			">
-			<!-- bosch-->
-			<div class="text-center referencesitem">
+				<!-- bosch-->
+				<div class="text-center referencesitem">
 
-				<div class=" referencesimage">
-					<img  src="../images/bosch.jpg" alt="Bosch Logo" />
+					<div class=" referencesimage">
+						<img src="../images/bosch.jpg" alt="Bosch Logo" />
+					</div>
+
+					<div>
+						<h4>Robert Bosch</h4>
+						<p>Bosch is a multinational engineering and electronics company.
+						</p>
+					</div>
+
+				</div>
+				<!-- bodyshop -->
+				<div class="text-center referencesitem">
+
+					<div class=" referencesimage">
+						<img src="../images/bodyshop.jpg" alt="Bodyshop Logo" />
+					</div>
+
+					<div>
+						<h4>The Body Shop</h4>
+						<p>The Body Shop is a global beauty brand and it has more than 3,000 stores in more than 60
+							countries.</p>
+					</div>
+
 				</div>
 
-				<div>
-				<h1>Robert Bosch</h1>
-				<p>Bosch is a multinational engineering and electronics company.
-				</p>
+				<!-- lapland -->
+				<div class="text-center referencesitem">
+
+					<div class=" referencesimage">
+						<img src="../images/lapland.jpg" alt="Lapland Hotels Logo" />
+					</div>
+
+					<div>
+						<h4>Lapland Hotels
+						</h4>
+						<p>Lapland Hotels is the largest and the most diverse hotel chain in Lapland.
+						</p>
+					</div>
+
 				</div>
+				<!-- ikea -->
+				<div class="text-center referencesitem">
 
-			</div>
-			<!-- bodyshop -->
-			<div class="text-center referencesitem">
+					<div class=" referencesimage">
+						<img src="../images/ikea.jpg" alt="Ikea Logo" />
+					</div>
 
-				<div class=" referencesimage">
-					<img  src="../images/bosch.jpg" alt="Bosch Logo" />
+					<div>
+						<h4>IKEA</h4>
+						<p>IKEA is a multinational furniture store.
+						</p>
+					</div>
+
 				</div>
-
-				<div>
-				<h1>Robert Bosch</h1>
-				<p>Bosch is a multinational engineering and electronics company.
-				</p>
-				</div>
-
-			</div>
-
-			<!-- lapland -->
-
-			<!-- ikea -->
 
 		</section>
+
+		<!-- here's the newsletter -->
+		<section id="newsletter" class=" flex md:h-64">
+			<div class="m-auto text-center">
+				<div>
+					<h1 id="" class="">
+						Subscribe to our newsletter
+					</h1>
+					<p class="" >Follow our story and  get the latest promotional news about our products and events.</p>
+				</div>
+				<div class="sm:grid lg:flex" role="form" id="contact-info" aria-label="Submit email for newsletter">
+					<input class="m-4 md:m-0 " placeholder="Your email address" id="letemail" name="email" aria-label="email" type="text">
+					<button onclick="newsLetter(email)" for="newsletter" class="m-4 md:m-0">Subscribe</button>
+				</div>
+		</section>
+
+		<footer class="bg-black h-52">
+
+		</footer>
 
 	</main>
 </body>
