footer and check to go

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -249,8 +249,30 @@
 				</div>
 		</section>
 
-		<footer class="bg-black h-52">
+		<footer class="bg-black h-52 text-white md:grid md:grid-cols-2">
+			<div class="">
+			<h4>Liana Technologies</h4>
+			<a class="" href="mailto:sales@lianatech.com"> Contact us</a>
+			<h5>Sales and inquiries</h5>
+			<p class="text-white"> Email: sales@lianatech.com</p>
+			<p class="text-white">Phone: +358 10 387 7053</p>
 
+			</div>
+
+			<div class="invisible md:visible" id="bottomnav">
+				<a>Company</a>
+				<a>Products</a>
+				<a>Contact us</a>
+				<a>News</a>
+				<a>Intranet</a>
+
+
+					<div id="some">
+					<a  href=""><img src="../images/social_facebook.png "></a>
+					<a  href=""><img src="../images/social_twitter.png "></a>
+					<a  href=""><img src="../images/social_linked_in.png "></a>
+					</div>
+			</div>
 		</footer>
 
 	</main>
