--- a/src/html/index.html
+++ b/src/html/index.html
@@ -249,17 +249,21 @@
 				</div>
 		</section>
 
-		<footer class="bg-black h-52 text-white md:grid md:grid-cols-2">
-			<div class="">
+		<footer id="footer" class="bg-black  text-white md:grid md:grid-cols-2">
+
+			<div class="md:grid-cols-2">
 			<h4>Liana Technologies</h4>
-			<a class="" href="mailto:sales@lianatech.com"> Contact us</a>
 			<h5>Sales and inquiries</h5>
 			<p class="text-white"> Email: sales@lianatech.com</p>
 			<p class="text-white">Phone: +358 10 387 7053</p>
 
+
+			<a class="md:float-right text-center button p-2 "> Contact us</a>
+
 			</div>
 
-			<div class="invisible md:visible" id="bottomnav">
+
+			<div class="float-right text-center pt-8" id="bottomnav">
 				<a>Company</a>
 				<a>Products</a>
 				<a>Contact us</a>
@@ -267,11 +271,11 @@
 				<a>Intranet</a>
 
 
-					<div id="some">
+					<div id="some" class="md:float-right md:mt-24">
 					<a  href=""><img src="../images/social_facebook.png "></a>
 					<a  href=""><img src="../images/social_twitter.png "></a>
 					<a  href=""><img src="../images/social_linked_in.png "></a>
-					</div>
+						</div>
 			</div>
 		</footer>
 
